--- a/app/src/main/res/layout/grades_layaout.xml
+++ b/app/src/main/res/layout/grades_layaout.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_principal"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -58,6 +57,7 @@
                 android:id="@+id/tv_grades"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="-50dp"
                 android:text="100°"
                 android:textColor="@color/white"
                 android:textSize="50dp"
@@ -82,7 +82,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/movie_list_rock"
+        android:id="@+id/weather_list_day"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
