--- a/app/src/main/res/layout/fragment_week_grades_layaout.xml
+++ b/app/src/main/res/layout/fragment_week_grades_layaout.xml
@@ -42,7 +42,7 @@
                 app:tint="@color/white" />
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -57,8 +57,8 @@
                 android:id="@+id/tv_grades"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="-50dp"
                 android:text="100°"
+                android:layout_gravity="center"
                 android:textColor="@color/white"
                 android:textSize="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -74,11 +74,12 @@
                 android:text="Main"
                 android:textColor="@color/white"
                 android:textSize="20dp"
+                android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_grades" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
