--- a/app/src/main/res/layout/fragment_weather_day_layout.xml
+++ b/app/src/main/res/layout/fragment_weather_day_layout.xml
@@ -29,7 +29,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:padding="4dp">
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
